--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2723,3 +2723,69 @@ button.close {
 .compare-commits-commit-id a {
   color:#767676;
 }
+
+.network-mybranch {
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  padding:10px 10px 14px 10px;
+  margin-bottom:20px;
+  border-radius:3px;
+}
+.network-mybranch-label {
+  border-radius: 3px;
+  display: inline-block;
+  padding: 2px 4px;
+  font-size: 11.844px;
+  font-weight: bold;
+  line-height: 14px;
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: #3a87ad;
+  width:100px;
+  text-align:center;
+  margin-right:10px;
+}
+
+.network-mybranch select, .network-member-branch select {
+  border:1px solid #d8d8d8;
+  border-radius: 3px;
+  padding:6px 5px;
+  width:30%;
+}
+
+.network-member-branch {
+  
+}
+
+.network-member-branch li {
+  border-bottom:1px solid #d8d8d8;
+  padding:10px 10px 14px 10px;
+  overflow:hidden;
+}
+.network-member-branch-label {
+  border-radius: 3px;
+  display: inline-block;
+  padding: 3px 4px;
+  font-size: 11.844px;
+  font-weight: bold;
+  line-height: 14px;
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: #468847;
+  width:100px;
+  text-align:center;
+  margin-right:10px;
+}
+.network-member-branch li > :first-child {
+  float:left;
+  width:80%;
+}
+.network-member-branch li > .last-child {
+  float:left;
+  width:20%;
+  text-align:right;
+}
