--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2857,3 +2857,22 @@ button.close {
   vertical-align:middle;
   padding:0 3px;
 }
+
+.submodule {
+  
+}
+.submodule > :first-child {
+  border:1px solid #d8d8d8;
+  border-radius: 3px 3px 0 0;
+  padding:8px 5px;
+  border-bottom:none;
+  background-color: #f7f7f7;
+}
+.submodule > .last-child {
+  border:1px solid #d8d8d8;
+  border-top:none;
+  font-size:16px;
+  padding:15px;
+  margin-bottom:30px;
+  border-radius: 0 0 3px 3px;
+}
