display user name and mail in admin susers page

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -82,33 +82,23 @@ input[type=text], input[type=password] {
 }
 
 .admin-users {
-  width:70%;
+  border-collapse:collapse;
+  width:100%;
 }
-
-.admin-users div {
-  display:inline-block;
+.admin-users th, .admin-users td {
+  border:1px solid #d8d8d8;
+  padding:5px;
+}
+.admin-users th {
+  font-weight:bold;
+  text-align:center;
+}
+.admin-users td {
+  
 }
 
 .admin-users form {
   display:inline-block;
-}
-
-.admin-users li {
-  border-bottom:1px solid #d8d8d8;
-  padding:8px 0;
-}
-
-.admin-users li:first-child {
-  border-top:1px solid #d8d8d8;
-}
-
-.admin-users li > div:first-child {
-  width:20%;
-}
-
-.admin-users li > div.last-child {
-  width:78%;
-  text-align:right;
 }
 
 .container {
