improve compare page popup

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -3157,6 +3157,10 @@ button.close {
   background-color: #fafafa;
 }
 
+.compare-select button span {
+  color:#767676;
+}
+
 .compare-header {
   border:1px solid #d8d8d8;
   overflow:hidden;
