--- a/public/css/common.css
+++ b/public/css/common.css
@@ -35,6 +35,37 @@
   box-sizing: border-box;
 }
 
+.issue-add-comment-header-tab a.disable {
+  background:none;
+  border:none;
+}
+
+.issue-add-comment-header-tab a {
+  background:white;
+  display:block;
+  width:100%;
+  padding:8px 13px;
+  color:#333;
+  border:1px solid #d8d8d8;
+  border-bottom:none;
+  border-radius:3px 3px 0 0;
+  margin-bottom:-1px;
+}
+.issue-add-comment-header-tab a:hover {
+  text-decoration:none;
+  color:inherit;
+}
+.issue-add-comment-header-tab {
+  display:inline-block;
+}
+.issue-add-comment-body {
+  padding:10px;
+}
+.issue-add-comment-header {
+  padding:7px 10px 0 10px;
+  background:#f7f7f7;
+  border-bottom:1px solid #d8d8d8;
+}
 .issue-add-comment-bottom {
   overflow:hidden;
 }
@@ -59,7 +90,6 @@
   border:1px solid #d8d8d8;
   border-radius: 3px;
   margin-top:10px;
-  padding:10px;
 }
 .issue-add-comment-message {
 }
