imrpvoe new issue form

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -35,6 +35,10 @@
   box-sizing: border-box;
 }
 
+.issue-add-comment-title {
+  margin-bottom:5px;
+}
+
 .issue-add-comment-header-tab a.disable {
   background:none;
   border:none;
