--- a/public/css/common.css
+++ b/public/css/common.css
@@ -35,6 +35,74 @@
   box-sizing: border-box;
 }
 
+.issues-title a {
+  color:black;
+}
+.issues-title a:hover {
+  color:blue;
+}
+
+.issues-button-container {
+  margin-bottom:10px;
+  overflow:hidden;
+}
+.issues-button-container-left {
+  float:left;
+  width:50%;
+}
+.issues-button-container-right {
+  text-align:right;
+  float:left;
+  width:50%;
+}
+.issues-labels {
+  border:1px solid #d8d8d8;
+  border-radius:3px;
+  display:inline-block;
+}
+.issues-labels a {
+  padding:5px 10px;
+  display:inline-block;
+  width:100%;
+}
+.issues-labels a {
+  color:inherit;
+}
+.issues-labels a:hover {
+  color:inherit;
+  text-decoration:none;
+  background:#eeeeee
+}
+
+.issues-header {
+  border:1px solid #d8d8d8;
+  background:#fafafa;
+  padding:10px;
+}
+.issues-body {
+  border:1px solid #d8d8d8;
+  border-top:none;
+  background:#fafafa;
+  background:white;
+}
+.issues-body li {
+  padding:10px;
+  border-top: 1px solid #d8d8d8;
+}
+.issues-body li:first-child {
+  border-top:none;
+}
+.issues-no-request {
+  padding:30px;
+  margin:1px auto;
+  width:600px;
+  text-align:center;
+}
+
+.issues-description {
+  color:#767676;
+}
+
 .issue-add-comment-title {
   margin-bottom:5px;
 }
