--- a/public/css/common.css
+++ b/public/css/common.css
@@ -35,6 +35,21 @@
   box-sizing: border-box;
 }
 
+.labels {
+  
+}
+.labels li {
+  border:1px #e5e5e5 solid;
+  border-top:none;
+  padding:7px 10px;
+}
+.labels li:first-child {
+  padding:10px 10px;
+  border-top:1px #e5e5e5 solid;
+  border-radius:3px 3px 0 0;
+  background:#f8f8f8;
+}
+
 .issues-title a {
   color:black;
 }
